# solana-skills

./: .gitignore  Cargo.toml  README.md  SKILL.md  claude.md
crates/qedgen/: Cargo.toml
crates/qedgen/src/: anchor_extractor.rs  ast.rs  check.rs  chumsky_adapter.rs  chumsky_parser.rs  cluster.rs  crucible_gen.rs  crucible_probe.rs  deps.rs  kani.rs  lean_gen.rs  main.rs  miri_verify.rs  pinocchio_adapt.rs  pinocchio_extractor.rs  pinocchio_probe.rs  pinocchio_to_spec.rs  probe.rs  probe_repro.rs  prompts.rs  proptest_gen.rs  ratify.rs  rust_codegen_util.rs  verify.rs
docs/prds/: RELEASE-v2.19.md
examples/pinocchio-fixtures/: README.md
examples/pinocchio-fixtures/pata-create/: README.md
examples/pinocchio-fixtures/ptoken-close-account/: README.md
examples/pinocchio-fixtures/ptoken-transfer/: Cargo.toml  README.md
examples/pinocchio-fixtures/ptoken-transfer/src/: lib.rs  transfer.rs
examples/rust/escrow/: Cargo.toml
examples/rust/escrow/tests/: kani.rs  proptest.rs
examples/rust/lending/: Cargo.toml
examples/rust/lending/tests/: kani.rs  proptest.rs
examples/rust/multisig/: Cargo.toml
references/: cli.md  qedspec-dsl.md
references/probes/pinocchio/: README.md  account_type_confusion.md  missing_pda_verification.md  mutable_borrow_aliasing.md  offset_overrun.md  position_based_account_without_type_tag.md  stale_safety_comment.md  unchecked_account_load.md  unchecked_amount_arith.md  unchecked_lamport_arith.md
skills/qedgen-auditor/: SKILL.md
skills/qedgen-auditor/references/: trust_surface_primitives.md
(+5 files in other folders)
